# gamify

./: .gitignore  BACKEND.md  CONFIG.md  CONFIG_FIX_SUMMARY.md  CONFIG_SYSTEM_REVIEW.md  CONFIG_VERSIONING_UI_UPDATE.md  IMPLEMENTATION.md  INTEGRATION_COMPLETE.md  README.md  seed_db.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 06e604ffc276_add_avatar_url_to_games_table.py  5c25d516c465_initial_migration_with_all_models.py  a1b2c3d4e5f6_add_section_configs_table.py  b2c3d4e5f6g7_cleanup_unused_tables.py  c3d4e5f6g7h8_rename_game_core_to_game.py  d4e5f6g7h8i9_add_haptic_removeads_tilebundle.py  d8ce88a80c68_add_new_config_sections.py  e5f6g7h8i9j0_refactor_section_config_versioning.py  f6g7h8i9j0k1_add_rating_link_spin_section_types.py  g7h8i9j0k1l2_add_tutorial_section_type.py  h8i9j0k1l2m3_replace_firebase_project_id_with_service_account.py  i9j0k1l2m3n4_replace_slug_with_app_id.py  j0k1l2m3n4o5_rename_avatar_url_to_logo_url.py  k1l2m3n4o5p6_remove_firebase_add_version_fields.py  l2m3n4o5p6q7_drop_audit_logs_and_users_tables.py  m3n4o5p6q7r8_add_users_and_game_assignments.py  n4o5p6q7r8s9_change_game_pk_to_app_id.py  o5p6q7r8s9t0_remove_is_active_from_users.py
backend/app/: cli.py  main.py
backend/app/api/dependencies/: __init__.py  auth.py  common.py  services.py
backend/app/api/v1/: router.py
backend/app/core/: auth.py  config.py  database.py  error_handlers.py  exceptions.py  firebase.py  response.py
backend/app/models/: __init__.py  audit_log.py  base.py  config.py  environment.py  experiment.py  game.py  section_config.py  user.py
backend/app/schemas/: __init__.py  audit_log.py  auth.py  config.py  environment.py  game.py  section_config.py
backend/app/schemas/config_sections/: ad_config.py  booster_config.py  chapter_reward_config.py  economy_config.py  game_config.py  game_core_config.py  haptic_config.py  notification_config.py  (+4 more)
backend/app/services/: __init__.py  audit_service.py  auth_service.py  config_converter.py  firebase_service.py  game_service.py  section_config_service.py  unity_transform.py  user_service.py
backend/app/utils/: __init__.py  file_utils.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_audit_logs.py  test_config_workflow.py  test_environment_endpoints.py  test_game_endpoints.py
backend/tests/services/: __init__.py  test_auth_service.py  test_game_service.py  test_user_service.py
backend/tests/unit/: __init__.py  test_ad_schema.py  test_additional_schemas.py  test_audit_service.py  test_config_converter.py  test_economy_schema.py  test_notification_schema.py  test_response_format.py
backend/tests/utils/: __init__.py  factories.py  test_unity_transform.py
(+233 files in other folders)
